<resources>
    <string name="app_name">ShopDani Management</string>
    <string name="app_logo_label">App logo</string>
    <string name="login_label">Login</string>
    <string name="logout_label">Logout</string>
    <string name="account_label">Account</string>
    <string name="create_account_label">Create account</string>
    <string name="already_have_account_label">Already hava an account?</string>
    <string name="home_label">Home</string>
    <string name="insights_label">Insights</string>
    <string name="financial_label">Financial</string>
    <string name="stock_label">Stock</string>
    <string name="sales_label">Sales</string>
    <string name="orders_label">Orders</string>
    <string name="products_label">Products</string>
    <string name="product_label">Product</string>
    <string name="catalog_label">Catalog</string>
    <string name="deliveries_label">Deliveries</string>
    <string name="drawer_menu_label">Drawer Menu</string>
    <string name="add_label">Add</string>
    <string name="done_label">Done</string>
    <string name="info_label">Info</string>
    <string name="expand_item_label">Expand item</string>
    <string name="up_button_label">Up button</string>
    <string name="profile_picture">Profile picture</string>
    <string name="product_image_label">Product image</string>
    <string name="category_image_label">Category image</string>
    <string name="categories_label">Categories</string>
    <string name="analytics_label">Analytics</string>
    <string name="analytics_image_label">Analytics image</string>
    <string name="stock_expired_item_label">Expired item.</string>
    <string name="empty_label">Empty</string>
    <string name="sale_payment_label">Today is the day to receive payments.</string>
    <string name="stock_expired_item_tag">%s is expired.</string>
    <string name="stock_payment_label">Day to pay your debit.</string>
    <string name="payment_tag">%s, value R$%s.</string>
    <string name="product_categories_label">Product Categories</string>
    <string name="stock_product_list">Products</string>
    <string name="new_product_label">New Product</string>
    <string name="edit_product_label">Edit Product</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="repeat_password_label">Repeat the password</string>
    <string name="new_password_label">New password</string>
    <string name="repeat_new_password_label">Repeat the new password</string>
    <string name="name_label">Name</string>
    <string name="title_label">Title</string>
    <string name="code_label">Code</string>
    <string name="discount_label">Discount</string>
    <string name="price_label">Price</string>
    <string name="description_label">Description</string>
    <string name="quantity_label">Quantity</string>
    <string name="date_label">Date</string>
    <string name="validity_label">Validity</string>
    <string name="company_label">Company</string>
    <string name="purchase_price_label">Purchase price</string>
    <string name="sale_price_label">Sale price</string>
    <string name="is_paid_label">Is product paid</string>
    <string name="role_label">Role</string>
    <string name="city_label">City</string>
    <string name="gender_label">Gender</string>
    <string name="age_label">Age</string>
    <string name="change_password_label">Change password</string>
    <string name="product_name_label">Product name</string>
    <string name="customer_name_label">Customer name</string>
    <string name="enter_username_label">Enter username</string>
    <string name="enter_password_label">Enter password</string>
    <string name="enter_repeat_password_label">Enter the password again</string>
    <string name="enter_new_password_label">Enter the new password</string>
    <string name="enter_repeat_new_password_label">Enter the new password again</string>
    <string name="enter_name_label">Enter name</string>
    <string name="enter_title_label">Enter title</string>
    <string name="enter_code_label">Enter code</string>
    <string name="enter_discount_label">Enter discount</string>
    <string name="enter_price_label">Enter price</string>
    <string name="enter_description_label">Enter description</string>
    <string name="enter_quantity_label">Enter quantity</string>
    <string name="enter_date_label">Enter date</string>
    <string name="enter_validity_label">Enter validity</string>
    <string name="enter_company_label">Enter company</string>
    <string name="enter_categories_label">Enter categories</string>
    <string name="enter_purchase_price_label">Enter purchase price</string>
    <string name="enter_sale_price_label">Enter sale price</string>
    <string name="enter_product_name_label">Enter product name</string>
    <string name="enter_customer_name_label">Enter customer name</string>
    <string name="enter_city_label">Enter city</string>
    <string name="enter_gender_label">Enter gender</string>
    <string name="enter_age_label">Enter age</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="category_label">Category</string>
    <string name="new_category_label">New category</string>
    <string name="more_options_label">More options</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="all_products_label">All the products</string>
    <string name="add_to_catalog_label">Add to catalog</string>
    <string name="save_categories_label">Save categories</string>
    <string name="amazon_label">Amazon</string>
    <string name="amazon_code_label">Amazon code</string>
    <string name="amazon_request_number_label">Amazon request number</string>
    <string name="amazon_price_label">Amazon price</string>
    <string name="amazon_tax_label">Amazon tax</string>
    <string name="amazon_profit_label">Amazon profit</string>
    <string name="amazon_sku_label">Amazon SKU</string>
    <string name="resale_profit_label">Resale profit</string>
    <string name="total_profit_label">Total profit</string>
    <string name="is_amazon_label">Sold on Amazon</string>
    <string name="price_tag">%.2fR$.</string>
    <string name="price_text_tag">R$ %s.</string>
    <string name="discount_tag">%s%% discount.</string>
    <string name="quantity_tag">%s, units.</string>
    <string name="insert_database_error">Failed to insert data into the database.</string>
    <string name="update_database_error">Failed to update data in the database.</string>
    <string name="delete_database_error">Failed to delete data in the database.</string>
    <string name="insert_server_error">Failed to insert data into the server.</string>
    <string name="update_server_error">Failed to update data on the server.</string>
    <string name="delete_server_error">Failed to delete data on the server.</string>
    <string name="empty_fields_error">Fill in the missing fields.</string>
    <string name="wrong_password_validation_label">Password must be the same</string>
    <string name="insufficient_items_stock">Insufficient items in stock.</string>
    <string name="login_database_error">Failed to login to database.</string>
    <string name="login_server_error">Failed to login to the server.</string>
    <string name="user_null_or_invalid_label">User is null or invalid!</string>
    <string name="username_already_exist_label">Username is already exist!</string>
    <string name="email_already_exist_label">Email is already exist!</string>
    <string name="incorrect_username_or_password_label">Incorrect username or password!</string>
    <string name="ok_code_label">OK</string>
    <string name="only_x_items_error_label">There\'s only %d items on stock.</string>
    <string name="search_label">Search</string>
    <string name="search_products_label">Search for products</string>
    <string name="search_customers_label">Search for costumers</string>
    <string name="item_image">Item image</string>
    <string name="new_item_label">New Item</string>
    <string name="new_sale_label">New Sale</string>
    <string name="edit_item_label">Edit Item</string>
    <string name="edit_sale_label">Edit Sale</string>
    <string name="date_of_sale_label">Date of sale</string>
    <string name="date_of_payment_label">Date of payment</string>
    <string name="is_paid_by_customer_label">Is paid by customer</string>
    <string name="is_ordered_by_customer_label">Is ordered by customer</string>
    <string name="new_stock_item_label">New Stock Item</string>
    <string name="new_order_item_label">New Order Item</string>
    <string name="edit_stock_item_label">Edit Stock Item</string>
    <string name="edit_order_item_label">Edit Order Item</string>
    <string name="stock_list_label">Stock List</string>
    <string name="orders_list_label">Orders List</string>
    <string name="customers_label">Customers</string>
    <string name="customer_label">Customer</string>
    <string name="new_customer_label">New Customer</string>
    <string name="edit_customer_label">Edit Customer</string>
    <string name="customer_photo_label">Customer photo</string>
    <string name="canceled_sales_label">Canceled Sales</string>
    <string name="delivery_label">Delivery</string>
    <string name="all_deliveries_label">All deliveries</string>
    <string name="not_delivered_label">Not delivered</string>
    <string name="delivered_label">Delivered</string>
    <string name="email_label">Email</string>
    <string name="address_label">Address</string>
    <string name="phone_number_label">Phone number</string>
    <string name="delivery_price_label">Delivery price</string>
    <string name="shipping_date_label">Shipping date</string>
    <string name="delivery_date_label">Delivery date</string>
    <string name="is_delivered_label">is delivered</string>
    <string name="enter_email_label">Enter email</string>
    <string name="enter_address_label">Enter address</string>
    <string name="enter_phone_number_label">Enter phone number</string>
    <string name="enter_delivery_price_label">Enter delivery price</string>
    <string name="enter_shipping_date_label">Enter shipping date</string>
    <string name="enter_delivery_date_label">Enter delivery date</string>
    <string name="enter_amazon_code_label">Enter Amazon code</string>
    <string name="enter_amazon_request_number_label">Enter Amazon request code</string>
    <string name="enter_amazon_price_label">Enter Amazon price</string>
    <string name="enter_amazon_tax_label">Enter Amazon tax</string>
    <string name="enter_amazon_profit_label">Enter Amazon profit</string>
    <string name="enter_amazon_sku_label">Enter Amazon SKU</string>
    <string name="enter_resale_profit_label">Enter resale profit</string>
    <string name="enter_total_profit_label">Enter total profit</string>
    <string name="show_label">Show</string>
    <string name="hide_label">Hide</string>
    <string name="dots_label">\u25CF\u25CF\u25CF\u25CF</string>
    <string name="customer_tag">Customer: %s</string>
    <string name="date_of_shopping_tag">Date of shopping, %s.</string>
    <string name="date_of_sale_tag">Date of sale, %s.</string>
    <string name="sales_options_label">Sales Options</string>
    <string name="charts_label">Charts</string>
    <string name="financial_info_label">Financial Info</string>
    <string name="customers_debit_label">Customers Debit</string>
    <string name="stock_debits_label">Stock Debits</string>
    <string name="last_sales_label">Last Sales</string>
    <string name="last_7_days_label">Last 7 days</string>
    <string name="last_21_days_label">Last 21 days</string>
    <string name="last_31_days_label">Last 31 days</string>
    <string name="stock_vs_orders_label">Stock vs Orders</string>
    <string name="company_sales_label">Sales by Company</string>
    <string name="avon_company_label">Avon</string>
    <string name="natura_company_label">Natura</string>
    <string name="boticario_company_label">O Boticário</string>
    <string name="eudora_company_label">Eudora</string>
    <string name="berenice_company_label">Quem disse Berenice?</string>
    <string name="oui_company_label">O.U.I</string>
    <string name="amount_of_sales_label">Amount of sales</string>
    <string name="amount_of_items_label">Amount of items</string>
    <string name="amount_of_items_sales_label">Amount of items/sales</string>
    <string name="amount_of_purchases_label">Amount of purchases</string>
    <string name="amount_of_money_label">Amount of money</string>
    <string name="stock_items_label">Stock Items</string>
    <string name="paid_label">Paid</string>
    <string name="owing_paid_label">Owing</string>
    <string name="profit_label">Profit</string>
    <string name="biggest_sale_label">Biggest sale</string>
    <string name="smallest_sale_label">Smallest sale</string>
    <string name="last_sale_label">Last sale</string>
    <string name="out_of_stock_label">Out of stock</string>
    <string name="order_desc_label">Order desc</string>
    <string name="order_asc_label">Order asc</string>
    <string name="ordered_by_name_label">Ordered by name</string>
    <string name="ordered_by_customer_name_label">Ordered by customer name</string>
    <string name="ordered_by_price_label">Ordered by price</string>
    <string name="ordered_by_last_label">Ordered by last</string>
    <string name="ordered_by_address_label">Ordered by Address</string>
    <string name="barcode_scanner_label">Barcode scanner</string>
    <string name="create_spreadsheet_label">Create a spreadsheet</string>
    <string name="spreadsheet_name_label">Spreadsheet name</string>
    <string name="customer_information_label">Customer Information</string>
    <string name="sale_information_label">Sale Information</string>
    <string name="owing_tag">Owing, %sR$.</string>
    <string name="amount_of_all_purchases_tag">Amount of all purchases, %sR$.</string>
    <string name="last_purchase_tag">Last purchase, %sR$.</string>
    <string name="all_sales_tag">All sales, %.2fR$.</string>
    <string name="stock_sales_tag">Stock sales, %.2fR$.</string>
    <string name="orders_sales_tag">Orders sales, %.2fR$.</string>
    <string name="profit_tag">Profit, %.2fR$.</string>
    <string name="liquid_profit_tag">Liquid profit, %.2fR$.</string>
    <string name="value_tag">R$ %.2f</string>
    <string name="value_text_tag">R$ %s</string>
    <string name="product_price_tag">%s, R$%.2f</string>
    <string name="product_price_text_tag">%s, R$%s</string>
    <string name="total_sales_value_tag">Total sales value, R$ %.2f</string>
    <string name="total_sales_text_value_tag">Total sales value, R$ %s</string>
    <string name="customer_debit_tag">Debit of R$ %s.</string>
    <string name="date_of_payment_tag">Date of payment %s.</string>
    <string name="deliver_to_tag">Deliver to %s.</string>
    <string name="delivery_price_tag">Delivery price %sR$.</string>
    <string name="delivery_date_tag">Delivery date %s.</string>
    <string name="phone_number_tag">Phone number %s.</string>
    <string name="product_tag">Product, %s.</string>
    <plurals name="description_label">
        <item quantity="one">%s, %d item, %s</item>
        <item quantity="other">%s, %d items, %s</item>
    </plurals>
    <plurals name="simple_description_label">
        <item quantity="one">%d item, %s.</item>
        <item quantity="other">%d items, %s.</item>
    </plurals>
</resources>